# address-book-with-redux-tui

./: .gitignore  Cargo.toml  DONE.todo  README.md  TODO.todo  doc.fish  state.json  test.fish  upgrade-deps.fish
src/: lib.rs  main.rs
src/address_book/: actions.rs  mod.rs  reducer.rs  state.rs
src/app/: constants.rs  renderer.rs  repl_loop.rs
src/app/middlewares/: air_cmd_mw.rs  ip_cmd_mw.rs  load_cmd_mw.rs  logger_mw.rs  mod.rs  save_cmd_mw.rs
src/json_rpc/: awair_local_api.rs  fake_contact_data_api.rs  get_ip_api.rs  mod.rs
src/tui/: mod.rs  renderer.rs  repl_loop.rs
src/tui/middlewares/: add_async_cmd_mw.rs  air_cmd_mw.rs  load_cmd_mw.rs  logger_mw.rs  mod.rs  save_cmd_mw.rs
tests/: test_async_trait.rs  test_future.rs
